--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/pg": "^8.11.6",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.12.0"
   }
 }
